src/examples/test-doubles/ReturnCallbackExampleTest.php.out
./tools/phpunit tests/ReturnCallbackExampleTest.php
PHPUnit 10.5.32 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.3.11

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.86 MB

There was 1 error:

1) ReturnCallbackExampleTest::testReturnCallbackStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnCallbackExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
